rwf-bin/src/ui/dialog/snapshot_tests/snapshots/rwf__ui__dialog__snapshot_tests__operation_report_viewing_the_latest_of_several_reports_shows_position_with_active_hint_120x40.snap
---
source: rwf-bin/src/ui/dialog/snapshot_tests/mod.rs
expression: "render_dialog_to_string(dialog, state, width, height)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 120, height: 40 },
    content: [
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                        ┌[1/5] Copy Report─────────────────────────────────────────────────────┐                        ",
        "                        │ Mark Source                    Destination               Res.  Undo  │                        ",
        "                        │ [x]  a.txt                     b.txt                     OK    ✓     │                        ",
        "                        │ [x]  c.txt                     d.txt                     Fail  *     │                        ",
        "                        │                                                                      │                        ",
        "                        │                                                                      │                        ",
        "                        │                                                                      │                        ",
        "                        │                                                                      │                        ",
        "                        │                                                                      │                        ",
        "                        │                                                                      │                        ",
        "                        │                                                                      │                        ",
        "                        │                                                                      │                        ",
        "                        │                                                                      │                        ",
        "                        │                                                                      │                        ",
        "                        │                                                                      │                        ",
        "                        │                                                                      │                        ",
        "                        │                                                                      │                        ",
        "                        │                                                                      │                        ",
        "                        │Details:                                                              │                        ",
        "                        │┌────────────────────────────────────────────────────────────────────┐│                        ",
        "                        ││Source: a.txt                                                       ││                        ",
        "                        ││Destination: b.txt                                                  ││                        ",
        "                        ││Result: OK                                                          ││                        ",
        "                        ││                                                                    ││                        ",
        "                        ││Undo: Available                                                     ││                        ",
        "                        │└────────────────────────────────────────────────────────────────────┘│                        ",
        "                        │Space: toggle  a: all/none  Enter: undo  Esc: close  ↑↓: select  ←→: h│                        ",
        "                        └──────────────────────────────────────────────────────────────────────┘                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 6, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 6, fg: Black, bg: Gray, underline: Reset, modifier: BOLD,
        x: 42, y: 6, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 7, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 8, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 8, fg: Black, bg: White, underline: Reset, modifier: BOLD,
        x: 95, y: 8, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 9, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 10, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 10, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 10, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 11, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 12, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 12, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 12, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 13, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 14, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 15, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 16, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 17, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 18, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 19, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 20, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 20, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 20, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 21, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 21, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 21, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 22, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 22, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 22, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 23, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 23, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 23, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 24, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 24, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 25, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 25, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 26, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 26, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 27, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 27, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 28, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 28, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 29, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 29, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 30, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 30, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 31, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 31, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 32, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 32, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 32, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 32, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 33, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 33, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
