rwf-bin/src/ui/dialog/snapshot_tests/snapshots/rwf__ui__dialog__snapshot_tests__operation_report_viewing_the_latest_of_several_reports_shows_position_with_active_hint_80x24.snap
---
source: rwf-bin/src/ui/dialog/snapshot_tests/mod.rs
expression: "render_dialog_to_string(dialog, state, width, height)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                ┌Copy Report───────────────────────────────────┐                ",
        "                │ Mark Source        Destination   Res.  Undo  │                ",
        "                │ [x]  a.txt         b.txt         OK    ✓     │                ",
        "                │ [x]  c.txt         d.txt         Fail  *     │                ",
        "                │                                              │                ",
        "                │                                              │                ",
        "                │                                              │                ",
        "                │Details:  [1 of 5]                            │                ",
        "                │┌────────────────────────────────────────────┐│                ",
        "                ││Source: a.txt                               ││                ",
        "                ││Destination: b.txt                          ││                ",
        "                ││Result: OK                                  ││                ",
        "                ││                                            ││                ",
        "                ││Undo: Available                             ││                ",
        "                │└────────────────────────────────────────────┘│                ",
        "                │Space: toggle  a: all/none  Enter: undo  Esc: │                ",
        "                └──────────────────────────────────────────────┘                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 3, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 17, y: 3, fg: Black, bg: Gray, underline: Reset, modifier: BOLD,
        x: 28, y: 3, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 4, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 5, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 17, y: 5, fg: Black, bg: White, underline: Reset, modifier: BOLD,
        x: 63, y: 5, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 6, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 7, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 17, y: 7, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 63, y: 7, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 8, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 17, y: 8, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 63, y: 8, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 9, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 17, y: 9, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 63, y: 9, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 10, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 12, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 17, y: 18, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 63, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
